<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="rateme__dialog_first_button_rate">Rate our app in the Play Store</string>
    <string name="rateme__dialog_first_thanks">Thanks for the rating!</string>
    <string name="rateme__dialog_feedback_message">Would you mind sharing your feedback?</string>
    <string name="rateme__email_subject" translatable="false">Feedback for %1$s</string>
    <string name="rateme__icon_content_description" translatable="false">Icon</string>

    <string name="app_name">[App_Name]</string>
    <string name="navigation_drawer_open" translatable="false">navigation_drawer_open</string>
    <string name="navigation_drawer_close" translatable="false">navigation_drawer_close</string>
    <string name="orientation" translatable="false">lang</string>

    <string name="tab_text_1">Applications</string>

    <string name="tab_text_3">Log</string>

    <string name="action_settings">Settings</string>
    <string name="action_share_app">Share App</string>
    <string name="action_rate_app">Rate App</string>
    <string name="action_discover_more_app">Discover More Apps</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>

    <string name="msg_no_notes">data is empty</string>

    <!--menu-->
    <!--<string name="action_how_to_use_app">How to Use the App?</string>-->

    <!-- 123 -->
    <!--<string name="action_support_developer">Support Developer</string>-->

    <string name="action_update">Update</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="about_version">Version</string>
    <!-- app rate-->
    <!--    <string name="rateme__dialog_first_title">Please rate this app!</string>-->
    <string name="rateme__dialog_first_title">Rate your experience</string>
    <string name="rateme__dialog_first_message">   If you enjoy using "%1$s", please take a moment to rate it.\nThanks for your support!</string>


    <string name="agreement_text" translatable="false">[Agreement]</string>
    <!--    <string name="privacy_policy_url" translatable="false" />-->






    <string name="update_available">Check out the latest version available to get the latest features and bug fixes</string>
    <string name="update_now">Update now</string>
    <string name="update_later">later</string>
    <string name="update_not_available">Update not available</string>
    <string name="update_check_later">No update available. Check for updates again later!</string>


    <!--Exit dialog-->
    <string name="exit_dialog_title">Leaving this App?</string>
    <string name="exit_dialog_message">Are you sure you want to close this QApp?</string>

    <string name="default_location">en</string>

    <!--    menu-->
    <string name="action_refresh" translatable="false">@null</string>

    <string name="action_more_app_01" translatable="false">Downloader For TikTok/Musically</string>
    <string name="action_more_app_02" translatable="false">More app, VIBE Droid</string>

    <string name="p_more_app_01" translatable="false">com.walhalla.ttloader</string>
    <string name="p_more_app_02" translatable="false">com.walhalla.vibro</string>

    <!--    <string name="file_provider" translatable="false">com.walhalla.luckypunch.provider</string>-->

<!--    <string name="share_default_text" translatable="false">-->
<!--                    My EPQ-->
<!--                    \nEysenck Personality Questionnaire-->
<!--                    \n#EPI #EPQ-->
<!--    </string>-->

      <string name="share_text_default">Hey my friend check out this app</string>



    <string name="appupdater_update_available">New update available!</string>
    <string name="appupdater_update_available_description_dialog">Update %1$s is available to download. By downloading the latest update you will get the latest features, improvements and bug fixes for %2$s.</string>
    <string name="appupdater_update_available_description_dialog_before_release_notes">Update %1$s is available to download.\n\nYou can get these new features:\n%2$s</string>
    <string name="appupdater_update_available_description_snackbar">Update %1$s is available!</string>
    <string name="appupdater_update_available_description_notification">Update %1$s of %2$s is available to download</string>
    <string name="appupdater_update_not_available">No updates available</string>
    <string name="appupdater_update_not_available_description">You\'ve got the latest version available of %s!</string>
    <string name="appupdater_btn_update">Update</string>
    <string name="appupdater_btn_disable">Don\'t show again</string>
    <string name="appupdater_btn_dismiss">Dismiss</string>
    <string name="appupdater_channel_name">Update notifications</string>

    <string name="appupdater_channel" translatable="false">appupdater_channel_01</string>


    <string name="press_again_to_exit">Press again to exit</string>
</resources>
